# grpc-sample

./: Dockerfile  pyproject.toml
app/: sample.proto  sample_pb2.py  sample_pb2_grpc.py  sample_server.py
